style(i18n): fix wording

--- a/src/i18n/locales/cn/footer.json
+++ b/src/i18n/locales/cn/footer.json
@@ -15,8 +15,8 @@
   "WCGIsABusinessBrand": "WCG是由多家公司共同使用的业务品牌，包括：",
   "WCGMarketsLtdIsALimitedLiabilityCompany": "WCG Markets Ltd 是位于圣文森特和格林纳丁斯群岛St.Vincent依据国际商业公司法注册的有限责任公司，公司编号为26087 BC 2020。注册地址是： The Financial Services Centre Stoney Ground, Kingstown, St.Vincent & the Grenadines.",
   "WCGMarketsLtdIsRegulatedByTheFINTRAC": "WCG Markets Ltd 获加拿大金融情报部门(FIU)加拿大金融交易和报告分析中心(FINTRAC)监管，MSB牌照编号为 M20282836。注册地址是： 150-10451 Shellbridge Way, Richmond BC V6X 2W8, Canada.",
-  "WCGGoldCompany": "文传金业有限公司获香港金银业贸易场 (Chinese Gold & Silver Exchange, CGSE)受其监管。为12号A1级别会员单位。註册地址是： Flat D, 22/F, Tower B, Capital Tower, 38Wai Yip Street, Kowloon, Hong Kong.",
+  "WCGGoldCompany": "文传金业有限公司获香港金银业贸易场 (Chinese Gold & Silver Exchange, CGSE)受其监管。为12号A1级别会员单位。注册地址是： Flat D, 22/F, Tower B, Capital Tower, 38Wai Yip Street, Kowloon, Hong Kong.",
   "WCGGlobalLtd": "Wenchuan Global Ltd 是于英国注册成立的有限责任公司，公司编号为 11019948。注册地址是： 5th Floor, 3 Gower Street, London, UK, WC1E 6HA",
   "HighRiskInvestmentWarning": "高风险投资警告：差价合约（CFD）属于复杂的金融产品，其使用杠杆交易的属性导致本金快速亏损的可能性较高，您有可能因此被要求追加保证金。请在入市前先了解差价合约的产品原理并考虑是否能够承受此风险。所有金融衍生产品工具的过往价格与表现并不担保或代表未来走势。此类金融产品并不适合所有投资者，请务必在入市前完全了解所有潜在的风险，并在有需要时寻求独立意见。",
-  "restrictedAreas": "受限制地区：WCG Markets Ltd 的网站信息不针对加拿大的卑诗省、魁北克省和萨斯喀彻温省地区、日本、朝鲜（朝鲜）、伊朗、美国以及香港的居民；并且不向身处与发布或使用该信息有违当地法律法规的国家或管辖地之人发送或供其使用。"
+  "restrictedAreas": "受限制地区：WCG Markets Ltd 的网站信息不针对加拿大的卑诗省、魁北克省和萨斯喀彻温省地区、日本、朝鲜、伊朗、美国以及香港的居民；并且不向身处与发布或使用该信息有违当地法律法规的国家或管辖地之人发送或供其使用。"
 }
