--- a/src/i18n/locales/zh/header.json
+++ b/src/i18n/locales/zh/header.json
@@ -6,7 +6,7 @@
   "questions": "常見問題",
   "announcements": "平台公告",
   "aboutUs": "關於我們",
-  "contactUs": "聯系我們",
+  "contactUs": "聯繫我們",
   "products": "交易產品",
   "viewTradingProducts": "查看交易產品",
   "forex": "外匯",
