--- a/src/i18n/locales/zh/home.json
+++ b/src/i18n/locales/zh/home.json
@@ -16,10 +16,10 @@
   "mobileTradingSystem": "移動交易系統",
   "WCGMobileTradingSystem": "WCG移動交易系統提供一種簡單方便的方法，以便客戶能夠在出行時進行交易，並立即對市場活動新聞和數據做出反應，從而實現機會的最大化。",
   "brandReputation": "品牌信譽及雙贏關系",
-  "WCGValuesTheCustomersTradingExperience": "WCG重視客戶的交易體驗，深信品牌的未來发展有賴與各合作夥伴的共同成長。",
-  "preciousMetalsContract": "貴金屬合約",
-  "timesLeverage": "100-200倍槓桿加持，低成本高收益，全球24小時交易，買漲買跌皆可獲利。",
-  "LondonGoldLondonSilver": "倫敦金&倫敦銀是國際金融期貨交易所提供的一種交易產品，交易規則簡單，T+0操作。",
+  "WCGValuesTheCustomersTradingExperience": "WCG重視客戶的交易體驗，深信品牌的未來發展有賴與各合作夥伴的共同成長。",
+  "preciousMetalsContract": "現貨黃金及現貨白銀買賣合約",
+  "timesLeverage": "100-200倍槓桿，低成本高收益，全球24小時交易，買漲買跌皆可獲利。",
+  "LondonGoldLondonSilver": "交易規則簡單，T+0操作。",
   "shortFundSettlementTime": "資金結算時間短，網上電子交易快捷安全。",
   "accountOpening": "開戶交易",
   "realTimeQuotation": "實時的交易品種報價",
