--- a/src/i18n/locales/zh/questions.json
+++ b/src/i18n/locales/zh/questions.json
@@ -9,7 +9,7 @@
   "HowToOpenAnAccountInWCG": "如何在WCG開戶?",
   "youCanRegisterYourRealAccount": "您可以在WCG官網注冊您的真實帳戶，或點此注冊。",
   "whatKindOfAccounts": "平台提供什麽種類的帳戶?",
-  "weProvideDifferentAccountTypes": "我們提供不同種類及等級帳戶，詳情請洽客服人員。",
+  "weProvideDifferentAccountTypes": "詳情請洽客服人員。",
   "whatKindOfDocuments": "我需要上傳哪些檔案?",
   "customersInMainlandChina": "中國大陸地區客戶僅需要上傳您的身份證明檔案；中國大陸地區以外客戶需要請您提供您的護照以及地址證明（如駕駛證、常住人口登記卡或近三個月水電煤帳單等）。",
   "howLongWillItTake": "帳戶需要多長時間稽核完成?",
