--- a/src/i18n/locales/cn/questions.json
+++ b/src/i18n/locales/cn/questions.json
@@ -9,7 +9,7 @@
   "HowToOpenAnAccountInWCG": "如何在WCG开户?",
   "youCanRegisterYourRealAccount": "您可以在WCG官网注册您的真实账户，或点此注册。",
   "whatKindOfAccounts": "平台提供什么种类的账户?",
-  "weProvideDifferentAccountTypes": "我们提供不同种类及等级账户，详情请洽客服人员。",
+  "weProvideDifferentAccountTypes": "详情请洽客服人员。",
   "whatKindOfDocuments": "我需要上传哪些档案?",
   "customersInMainlandChina": "中国大陆地区客户仅需要上传您的身份证明档案；中国大陆地区以外客户需要请您提供您的护照以及地址证明（如驾驶证、常住人口登记卡或近三个月水电煤帐单等）。",
   "howLongWillItTake": "账户需要多长时间稽核完成?",
