style(i18n): fix wording

--- a/src/i18n/locales/cn/intermediateTrading.json
+++ b/src/i18n/locales/cn/intermediateTrading.json
@@ -63,27 +63,27 @@
   "onceYouHaveDeterminedThis": "一旦您确定了这一点，您就可以决定在何处设置您的止损价格。设置止损相当于为您的交易上一道保险，以确保您不会在一次交易中损失所有资金。但需要特别注意的是，止损并不能完全保证安全——如果市场发生价格跳空，您的交易可能不会止损在预设的价格上。",
   "theMarketPriceGapRefers": "市场价格跳空指的是市场在非常短的时间内突然发生的巨大波动。",
   "example": "示例",
-  "upposeYouHaveAUD10": "假设您的帐户内有10，000澳元，您愿意拿来承受风险的资金占总资金的2%，接下来您需要计算出交易的仓位大小。在计算过程中，您所交易的货币对种类也会影响到开仓量的计算。例如，200澳元的风险资金，在交易AUD/USD时的开仓量与NZD/CAD不同——因为不同货币对的每点价值存在差异。",
+  "upposeYouHaveAUD10": "假设您的帐户内有10,000澳元，您愿意拿来承受风险的资金占总资金的2%，接下来您需要计算出交易的仓位大小。在计算过程中，您所交易的货币对种类也会影响到开仓量的计算。例如，200澳元的风险资金，在交易AUD/USD时的开仓量与NZD/CAD不同——因为不同货币对的每点价值存在差异。",
   "trade1LotOfAUDUSDInAn": "在澳元结算的帐户中交易1手AUD/USD",
-  "transactionVolume": "交易量=100，000",
-  "yiPip00001": "1点=0001",
-  "aUDUSDexchangeRate": "AUD/USD汇率=0.7465",
-  "pipValue0000107465": "每点价值=0.0001/0.7465 100，000=13.39澳元",
+  "transactionVolume": "交易量= 100,000",
+  "yiPip00001": "1点= 0001",
+  "aUDUSDexchangeRate": "AUD/USD汇率= 0.7465",
+  "pipValue0000107465": "每点价值= 0.0001 / 0.7465 x 100,000 = 13.39澳元",
   "trade1LotOfNZDCADin": "在澳元结算的帐户中交易1手NZD/CAD",
-  "tradingVolume": "交易量=100，000",
-  "aUDCADExchangeRate": "AUD/CAD汇率=0.9907",
-  "pipValue0000109907": "每点价值=0.0001/0.9907 100，000=10.09澳元",
-  "asYouCanSeeTradingDifferent": "正如您所看到的，交易不同货币对意味着货币对波动的每点价值也会有所不同——交易AUD/USD时，市场价格每波动1点所带来的资金风险是13。39澳元，而交易NZD/CAD时，相应的每点价值是10.09澳元。",
+  "tradingVolume": "交易量= 100,000",
+  "aUDCADExchangeRate": "AUD/CAD汇率= 0.9907",
+  "pipValue0000109907": "每点价值= 0.0001 / 0.9907 x 100,000 = 10.09澳元",
+  "asYouCanSeeTradingDifferent": "正如您所看到的，交易不同货币对意味着货币对波动的每点价值也会有所不同——交易AUD/USD时，市场价格每波动1点所带来的资金风险是13.39澳元，而交易NZD/CAD时，相应的每点价值是10.09澳元。",
   "toCalculateTheSpecificPrice": "要计算出您设置止损的具体价格，接下来您需要计算出在多少点的逆向波动后，仓位的累计亏损会达到200澳元。",
-  "aUDUSD": "AUD/USD——$200/$13.39=15点止损",
-  "nZDCAD": "NZD/CAD——$200/$10.09=20点止损",
-  "ifYouWantToSetALargerStop": "如果您想要设置一个更大的止损，那么您需要减少交易量——例如，将1标准手的交易量降低至1迷你手（10，000）",
+  "aUDUSD": "AUD/USD——$200 / $13.39 = 15点止损",
+  "nZDCAD": "NZD/CAD——$200 / $10.09 = 20点止损",
+  "ifYouWantToSetALargerStop": "如果您想要设置一个更大的止损，那么您需要减少交易量——例如，将1标准手的交易量降低至1迷你手（10,000）",
   "inTheCaseOfTrading": "在交易1迷你手AUD/USD的情况下，您的止损可以扩大至距离开仓价格150点，而对于NZD/CAD交易，您的止损则可以扩大至距离开仓价格200点。",
   "pleaseRememberThat": "请记住，您的每一笔交易始终伴随着风险——请确保您充分理解您所面对的交易风险，并能够对它泰然处之。",
   "ifYouWantToBecomeATrader": "如果您想成为一位交易者，制定交易策略是至关重要的。在这里，我们将探讨交易策略所包含的一些重要内容。",
   "assessYourSkills": "评价您的技能",
   "haveYouTestedYourStrategy": "您测试过您的策略了吗?您确信您的策略是有效的吗?您能毫不犹豫地遵循您的策略吗?如果您交易策略还不够完善，那么最好通过测试不断调整，直到您能放心使用您的策略。",
-  "psychologicalPreparation": "心理准",
+  "psychologicalPreparation": "心理准备",
   "tradingCanAffectYourEmotions": "交易会使情绪像坐过山车一样起伏，所以努力让情绪不受干扰显得尤为重要。如果您面临个人压力而无法调节交易带来的挑战，那么最好不要进行交易。如果您在情绪和心理上都准备好了，那么您可以开始进行交易，但是请确保您的帐户内只持有一个单子。",
   "risksManagement": "设置风险等",
   "whenYouAreTrading": "当交易时，您应该设置一个能使您面对亏损处之泰然的风险等级。专业的交易者倾向把风险控制在本金的1%至5%，具体多少取决于您的交易风格和风险承受能力。",
