--- a/src/i18n/locales/zh/advancedTrading.json
+++ b/src/i18n/locales/zh/advancedTrading.json
@@ -54,11 +54,11 @@
   "capitalFlows": "資本流動根據資本形式可以分為兩種：實體流動和投資組合流動。實體流動是指外商直接投資，他們會將自己的資金先兌換成投資國的貨幣，導致投資國貨幣升值。投資組合流動下面又分為股票和固定收益（例如債券）。",
   "whenACountry": "當一國的股票市場利好時，表明資本正在流入股市，外資也會受到吸引，從而拉升本土貨幣價值。當一國股票市場正處在跌勢中時，表明資本正在撤離市場，同時撤離的還有國外資本，從而對本土貨幣價值不利。因此外匯交易者可以跟隨全球股市表現來預測各國在較為長期範圍內的資本流量。",
   "theFixedIncomeMarket": "固定收益市場與股票市場類似，其收益率越高，則越利於本國貨幣貨幣升值。它的區別在於固定收益市場在全球經濟不穩時，其較為穩健和安全的特點為全球資本起了避難的作用。長線交易者應註意分析固定收益市場的利差：",
-  "detectCurrency": "1。檢測貨幣的利差——歐洲銀行同業拆息與歐洲美元",
+  "detectCurrency": "1. 檢測貨幣的利差——歐洲銀行同業拆息與歐洲美元",
   "investorsCanPay": "投資者可以留意歐洲銀行同業拆息和歐洲美元的差別。歐洲銀行同業拆息是反映歐洲短期利率的固定收益資產。歐洲美元指存放於美國境外銀行的美元存款。因為美國和歐洲擁有最完善的固定收益和股票市場，如果歐洲銀行同業拆息較歐洲美元存款利率為高，將驅使投資者賣出美國資產和買入外國資產，對外匯市場產生一定影響。相反，如果歐洲銀行同業拆息和歐洲美元的正差距收窄，即歐洲銀行同業拆息的利息率降低，歐洲資產的吸引力便會減少，驅使投資者賣出歐洲資產。",
-  "theFixedIncome": "2。遍布歐洲的固定收益差距——金邊債券、歐洲銀行同業拆息與歐洲美元",
+  "theFixedIncome": "2. 遍布歐洲的固定收益差距——金邊債券、歐洲銀行同業拆息與歐洲美元",
   "giltsBonds": "金邊債券是英國政府發行的固定收益產品。買賣英磅兌美元和歐元兌英磅時，需要註意金邊債券、歐洲銀行同業拆息和歐洲美元的差距。當英國息率比起歐洲或美國息率的正差距下跌，英國的固定收益投資機會對外國投資者的吸引便會減少。投資者會賣出所持的英鎊特定資產去尋找其它較高回報的投資機會，使英鎊出現回吐壓力。",
-  "otherCountriesInternational": "3。其它國家——國際固定收益市場",
+  "otherCountriesInternational": "3. 其它國家——國際固定收益市場",
   "theFixedIncomeProducts": "美國、英國和歐洲以外的國家的固定收益產品和它們的收益差距也值得註視。例如澳洲和紐西蘭實行高息政策，令投資者賣出本土貨幣去購買澳元或紐元。該活動會在其它國家利率下降時更為明顯。相反，如果美國、英國和歐洲的利率上升時，資金可能會從澳洲和紐西蘭調出，加重其貨幣壓力。",
   "weAlsoNeed": "在進行中長線的基本面時，我們還需要考慮更多因素。例如在分析美元的長期走勢時，需要考慮美聯儲的貨幣及利率政策、美國經濟情況和世界地緣政治事件對美國影響等各個方面。這時候數據新聞顯得尤為重要，您可以過去的數據新聞了解到一國在過去一段時間中的經濟表現以及該國正在采取的貨幣及利率政策，並據此來推測該國貨幣在未來一段時間的趨勢。因此，為了基本面分析的準確與全面，即使您不交易新聞，也應保持對財經日歷中重要經濟指標的關註。",
   "definition": "定義",
@@ -67,7 +67,7 @@
   "fibonacciRetracementsProvide": "斐波那契回調線提供給我們一個很好預測支持位和阻力位的方法，升勢或跌勢持續的時間越長，回調線水平的可靠性就越高。",
   "someTradersLike": "有些交易者喜歡在不同時間週期的圖表上，針對長期和短期的趨勢分別畫斐波那契回調線，如果長期回調線的水平與短期回調線水平越接近，回調線的可靠性越高。",
   "parameter": "參數",
-  "uptrendOrDowntrend": "升勢或跌勢的38。2%、50。0%和61。8%的位置是最常用的回調線水平。38。2%普遍被認為是可靠性最低的水平，也即匯價達到該水平時就調轉方向的可能性不大。匯價所貼近的百分比水平越高（即61。8%），其折返的機會就越大。",
+  "uptrendOrDowntrend": "升勢或跌勢的38.2%、50.0%和61.8%的位置是最常用的回調線水平。38.2%普遍被認為是可靠性最低的水平，也即匯價達到該水平時就調轉方向的可能性不大。匯價所貼近的百分比水平越高（即61.8%），其折返的機會就越大。",
   "applicationExample": "應用示例",
   "ifYouFind": "如果您在一張圖表上找到了一波剛剛結束的升勢或跌勢（判斷趨勢是否已結束可以使用123法則，詳細請查看新手學堂《技術分析與趨勢判斷》），您就可以考慮開始用斐波那契回調線來判斷接下來的匯價支持或阻力位了。",
   "inTheMT4": "在MT4平台上，您可以在平台上方的工具條中找到斐波那契回調線。",
