style(questions): fix wording

--- a/src/i18n/locales/id/questions.json
+++ b/src/i18n/locales/id/questions.json
@@ -15,7 +15,8 @@
   "howLongWillItTake": "Berapa lama waktu yang dibutuhkan untuk memproses aplikasi penarikan?",
   "accountOpeningWillTake": "Pembukaan rekening biasanya memakan waktu 1 hari kerja.",
   "howLongWillItTakeToProcess": "Berapa lama waktu yang dibutuhkan untuk memproses aplikasi penarikan?",
-  "theWithdrawalWillTake": "Penarikannya akan memakan waktu 1-3 hari kerja, tidak termasuk tanggal aplikasi.",
+  "submitTheWithdrawal": "Kirim instruksi penarikan sebelum pukul 11:00 pagi, dan Anda akan bisa mendapatkan akun Anda sebelum sekitar pukul 13:00 pada hari yang sama.",
+  "submitTheWithdrawalInstruction": "Kirim instruksi penarikan sebelum pukul 17:00, dan akun akan dikreditkan sebelum pukul 19:00 pada hari yang sama.",
   "HowDoIKnowMyWithdrawal": "Bagaimana saya tahu aplikasi penarikan saya disetujui?",
   "onceTheWithdrawalApplication": "Setelah aplikasi penarikan disetujui, jumlahnya akan dikurangkan dari akun perdagangan Anda, dan margin yang tersedia untuk perdagangan dan mempertahankan posisi terbuka yang belum terselesaikan akan dikurangi.",
   "whatIsTheMT4Platform": "Apa itu platform MT4?",
