--- a/src/i18n/locales/zh/questions.json
+++ b/src/i18n/locales/zh/questions.json
@@ -15,7 +15,8 @@
   "howLongWillItTake": "帳戶需要多長時間稽核完成?",
   "accountOpeningWillTake": "開戶正常1個工作日內會辦理完成。",
   "howLongWillItTakeToProcess": "辦理出金申請需要多長時間?",
-  "theWithdrawalWillTake": "我司每天有兩個時段出金：上午11點之前申請出金會在11點出金，上午11點之後至下午5點之前申請出金會在下午5點出金，下午5點之後申請出金 會在第二個工作日上午11點出金處理後最快2小時內到帳。",
+  "submitTheWithdrawal": "上午 11:00時 前提交提款指示，當天約 下午 1:00時 前便能到帳。",
+  "submitTheWithdrawalInstruction": "下午 5:00時 前提交提款指示，當天約 晚上 7:00時 前便能到帳。",
   "HowDoIKnowMyWithdrawal": "如何知道出金申請已經被準予?",
   "onceTheWithdrawalApplication": "一旦提款申請獲得批準，出金金額將自動從平台中扣除，並減少可用於交易和維持任何未結頭寸的保證金。",
   "whatIsTheMT4Platform": "什麽是MT4平台?",
