fix(about/queston): about, question, MT4APPDownload: fix wording and layout

--- a/src/i18n/locales/cn/questions.json
+++ b/src/i18n/locales/cn/questions.json
@@ -2,10 +2,10 @@
   "questions": "常见问题",
   "thisArticleCollects": "本文收集了大部分投资者经常会问到的问题，统一为您做个详细的解答。",
   "whatKindOfSupervision": "WCG是什么监管?",
-  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd 根据国际商法註册并受圣文森特和格林纳丁斯金融服务管理局 (SVGFSA) 监管，编号为 26087 BC 2020。",
+  "WCGIsABusinessBrand": "WCG 是由多家公司共同使用的業務品牌，包括",
+  "WCGMarketsLtdIsAuthorized": "文传金业有限公司獲香港金銀業貿易場(Chinese Gold & Silver Exchange,受其監管。為 12 號 A1 級別會員單位。",
   "WCGMarketsLtdIsSupervised": "WCG Markets Ltd 由加拿大金融情报机构 (FIU) 和加拿大金融交易和报告分析中心 (FINTRAC) 监管。 MSB 许可证编号为 M20282836。",
-  "WCGMarketsLtdIsAuthorized": "WCG Markets Ltd 由香港金银交易所 (CGSE) 授权和监管，是第 12 号 A1 会员。",
-  "WCGIsALimitedLiabilityCompany": "WCG 是一家在英国註册成立的有限责任公司，公司编号为 11019948。",
+  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd 根据国际商法註册并受圣文森特和格林纳丁斯金融服务管理局 (SVGFSA) 监管，编号为 26087 BC 2020。",
   "HowToOpenAnAccountInWCG": "如何在WCG开户?",
   "youCanRegisterYourRealAccount": "您可以在WCG官网注册您的真实账户，或点此注册。",
   "whatKindOfAccounts": "平台提供什么种类的账户?",
