--- a/src/i18n/locales/id/questions.json
+++ b/src/i18n/locales/id/questions.json
@@ -2,10 +2,10 @@
   "questions": "Berita perusahaan",
   "thisArticleCollects": "Artikel ini mengumpulkan sebagian besar pertanyaan yang sering ditanyakan investor, dan semoga jawaban tersebut bermanfaat bagi Anda.",
   "whatKindOfSupervision": "Pengawasan seperti apa yang diatur WCG?",
-  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd terdaftar di bawah Hukum Bisnis Internasional dan diatur oleh Saint Vincent dan Otoritas Jasa Keuangan Grenadines (SVGFSA), bernomor 26087 SM 2020.",
-  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd diawasi oleh Unit Intelijen Keuangan Kanada (FIU) dan Pusat Analisis Transaksi dan Pelaporan Keuangan Kanada (FINTRAC). Nomor lisensi MSB adalah M20282836.",
+  "WCGIsABusinessBrand": "WCG adalah merek bisnis yang digunakan oleh banyak perusahaan, termasuk",
   "WCGMarketsLtdIsAuthorized": "WCG Markets Ltd disahkan dan diawasi oleh Hong Kong Gold & Silver Exchange (CGSE), dan merupakan anggota No. 12 A1.",
-  "WCGIsALimitedLiabilityCompany": "WCG adalah perseroan terbatas yang didirikan di Inggris dengan nomor perusahaan 11019948.",
+  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd diawasi oleh Unit Intelijen Keuangan Kanada (FIU) dan Pusat Analisis Transaksi dan Pelaporan Keuangan Kanada (FINTRAC). Nomor lisensi MSB adalah M20282836.",
+  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd terdaftar di bawah Hukum Bisnis Internasional dan diatur oleh Saint Vincent dan Otoritas Jasa Keuangan Grenadines (SVGFSA), bernomor 26087 SM 2020.",
   "HowToOpenAnAccountInWCG": "Bagaimana cara membuka akun di WCG?",
   "youCanRegisterYourRealAccount": "Anda dapat mendaftarkan akun riil Anda di situs resmi WCG, atau klik di sini untuk mendaftar.",
   "whatKindOfAccounts": "Jenis akun apa yang disediakan platform?",
