--- a/src/i18n/locales/ar/about.json
+++ b/src/i18n/locales/ar/about.json
@@ -26,15 +26,10 @@
   "fullyProvideCustomers": "نقوم بتزويد العملاء بنظام تشغيل آمن بالكامل وأدوات تداول كاملة وموارد مالية وفيرة ودعم عالمي احترافي",
   "qualityService": "جودة الخدمة",
   "ourSalesTeam": "تلقى فريق المبيعات وفريق دعم العملاء الخاص بشركتنا تدريبًا احترافيًا، ونسعى جاهدين لتزويدك بأفضل تجربة تداول",
-  "becomeOurPartner": "كن شريكنا",
-  "joinWCGsPartnerProgram": "!انضم إلى برنامج شركاء WCG وابدأ عملك الخاص على الفور",
-  "joinNow": "انضم الآن",
-  "mrXiao": "السيد شاو",
-  "inTheBeginning": ".في بداية الأمر انشغلت بالعمل في مكتب صغير مستأجر، وكان الربح الأولي لي يغطي فقط الاستثمار الأول الذي قمت به.  أما اليوم فقد أصبحت أحد أنجح شركاء ونتشوآن",
-  "msHuang": "السيدة هوانغ",
-  "becauseIAmGood": ".لأنني أجيد إدارة المجتمعات على الشبكات الاجتماعية. يستمر عدد العملاء في النمو وتستمر الأرباح في الزيادة من خلال التسويق الشفهي. شكراً لونتشوآن لمنحنا مثل هذه منصة التداول الرائعة",
-  "msZheng": "السيدة زينج تشنغ",
-  "whenIFirstCameInto": ". لقد أحببت وضع التشغيل البسيط والشامل منذ أن تعاملت مع ونتشوآن للمرة الأولى. وعندما واجهت مشكلة، وجدت أن خدمة العملاء متحمسة للغاية ومستعدة للمساعدة، وكان زبائني راضين جداً",
-  "msLai": "السيدة لاي",
-  "whileWorkingWithWCG": ".لقد تعلمت الكثير عن السوق المالية أثناء العمل مع ونتشوآن. الآن غالبًا ما أشارك بالآراء والمصادر مع أصدقائي"
+  "licenseIntroduction": "License introduction",
+  "WCGMarketsLtdIsAuthorized": "WCG Markets Ltd is authorized and supervised by the Hong Kong Gold & Silver Exchange (CGSE). For the No. 12 A1 level trainer.",
+  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd is registered under the International Business Law and is regulated by the Saint Vincent and the Grenadines Financial Services Authority (SVGFSA), with registration number 26087 BC 2020. Saint Vincent and the Grenadines Golden FSA (Financial Services Authority) is the national authority responsible for the management and supervision of international financial services institutions and non-bank financial institutions in Saint Vincent and the Grenadines.",
+  "HongKongIsThe": "Hong Kong is the world's third largest gold trading market after the New York gold market and the London gold market. The Hong Kong Gold and Silver Exchange (CGSE) was established in 1910 and is currently the only gold and silver exchange in Hong Kong that trades spot gold and silver. Implement a membership system. The Hong Kong Gold and Silver Exchange (CGSE) aims to provide members with trading venue facilities and related services to conduct gold, silver and other precious metals trading activities. It has the ability to implement the business rules of the gold exchange, regulate trading behavior, supervise member trading operations, and investigate and punish violations of this field. Various functions such as members who act as stipulated in the articles of association.",
+  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd is supervised by the Canadian Financial Intelligence Unit (FIU) and the Canadian Financial Transaction and Reporting Analysis Center (FINTRAC). The MSB license number is M20282836. The Canadian Financial Transaction and Reporting Analysis Center (FINTRAC) is Canada's financial intelligence unit, established in 2000. It is an independent agency that reports to the Minister of Finance and is mainly responsible for collecting, analyzing, evaluating and disclosing relevant information about the Canadian financial industry to protect Canadian financial stability and security.",
+  "view": "View"
 }
