--- a/src/i18n/locales/cn/about.json
+++ b/src/i18n/locales/cn/about.json
@@ -26,15 +26,10 @@
   "fullyProvideCustomers": "全力为客户提供安全的操作系统、完备的交易工具、丰富的金融资源以及专业的全球支持。",
   "qualityService": "优质服务",
   "ourSalesTeam": "我们的销售团队以及客户支持团队均已接受良好训练，力求提供给您最佳的交易体验。",
-  "becomeOurPartner": "成为我们的合作伙伴",
-  "joinWCGsPartnerProgram": "加入WCG的合作伙伴计划，立即开展自己的事业！",
-  "joinNow": "立即加入",
-  "mrXiao": "萧先生",
-  "inTheBeginning": "一开始我只是在租赁的小办公室里埋头工作，我的第一笔利润正好抵消了初始投资额。今天，我是WCG最成功的合作伙伴之一。",
-  "msHuang": "黄女士",
-  "becauseIAmGood": "由于我擅长在社交网络上运营社区。经由口碑行销，客户数量不断增长，利润也一直随之新增。感谢WCG给我们这么好的平台。",
-  "msZheng": "郑女士",
-  "whenIFirstCameInto": "当初一接触WCG就爱上了，简单不复杂的操作模式，在我遇见问题的时候，客服都非常热心的帮助我，我的客户都十分满意。",
-  "msLai": "赖女士",
-  "whileWorkingWithWCG": "在跟WCG合作的期间，我学习到了很多关于金融市场的知识，现在我常常与身边的朋友一起分享行情看法，共享资源。"
+  "licenseIntroduction": "牌照介绍",
+  "WCGMarketsLtdIsAuthorized": "文传金业有限公司（获香港金银业贸易场（Chinese Gold & Silver Exchange, CGSE）受权并受其监管。为12号A1级别行员。",
+  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd 根据国际商业法註册成立受圣文森特和格林纳丁斯金融服务管理局（SVGFSA）监管，登记编号为 26087 BC 2020。圣文森特和格林纳丁斯金FSA（金融服务管理局）是负责管理和监督国际金融服务机构以及圣文森特和格林纳丁斯群岛非银行金融机构的国家管理局。",
+  "HongKongIsThe": "香港是世界上仅次于纽约黄金市场、伦敦黄金市场的第三大黄金交易市场，香港金银业贸易场（CGSE）成立于1910年，是香港现时唯一进行现货黄金、白银买卖的金银交易所，实行会员制度。香港金银业贸易场（CGSE）旨在为会员提供交易场所设施及相关服务来进行黄金、白银等贵金属交易活动，具有实施黄金交易所的业务规则、规范交易行为、监管会员交易业务、查处违反本场章程规定行为的会员等各项职能。",
+  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd 获加拿大金融情报部门（FIU）加拿大金融交易和报告分析中心（FINTRAC）监管，MSB牌照编号为 M20282836。加拿大金融交易和报告分析中心（FINTRAC）是加拿大的金融情报单位，于2000年成立。它是一个独立机构，向财政部长汇报工作，主要负责收集、分析、评估和披露加国金融行业的相关资料，以保护加国的金融稳定及安全。",
+  "view": "点击查看"
 }
