--- a/src/i18n/locales/en/about.json
+++ b/src/i18n/locales/en/about.json
@@ -26,15 +26,10 @@
   "fullyProvideCustomers": "Fully provide customers with a safe operating system, complete trading tools, abundant financial resources and professional global support.",
   "qualityService": "Quality service",
   "ourSalesTeam": "Our sales team and customer support team have received professional training, and strive to provide you with the best trading experience.",
-  "becomeOurPartner": "Become our partner",
-  "joinWCGsPartnerProgram": "Join WCG's partner program and start your own business immediately!",
-  "joinNow": "Join now",
-  "mrXiao": "Mr. Xiao",
-  "inTheBeginning": "In the beginning, I just immersed myself to work in a small rented office, and my first profit just offset the initial investment. Today, I am one of WCG's most successful partners.",
-  "msHuang": "Ms. Huang",
-  "becauseIAmGood": "Because I am good at running communities on social networks. Through word-of-mouth marketing, the number of customers continues to grow and profits continue to increase. Thank you WCG for giving us such a great trading platform.",
-  "msZheng": "Ms. Zheng",
-  "whenIFirstCameInto": "When I first came into contact with WenChuan, I fell in love with the simple yet comprehensive operation mode. When I encountered a problem, the customer service was very enthusiastic and willing to help out, and my customers were very satisfied.",
-  "msLai": "Ms. Lai",
-  "whileWorkingWithWCG": "While working with WCG, I learned a lot about the financial market. Now I often share market views and resources with my friends."
+  "licenseIntroduction": "License introduction",
+  "WCGMarketsLtdIsAuthorized": "WCG Markets Ltd is authorized and supervised by the Hong Kong Gold & Silver Exchange (CGSE). For the No. 12 A1 level trainer.",
+  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd is registered under the International Business Law and is regulated by the Saint Vincent and the Grenadines Financial Services Authority (SVGFSA), with registration number 26087 BC 2020. Saint Vincent and the Grenadines Golden FSA (Financial Services Authority) is the national authority responsible for the management and supervision of international financial services institutions and non-bank financial institutions in Saint Vincent and the Grenadines.",
+  "HongKongIsThe": "Hong Kong is the world's third largest gold trading market after the New York gold market and the London gold market. The Hong Kong Gold and Silver Exchange (CGSE) was established in 1910 and is currently the only gold and silver exchange in Hong Kong that trades spot gold and silver. Implement a membership system. The Hong Kong Gold and Silver Exchange (CGSE) aims to provide members with trading venue facilities and related services to conduct gold, silver and other precious metals trading activities. It has the ability to implement the business rules of the gold exchange, regulate trading behavior, supervise member trading operations, and investigate and punish violations of this field. Various functions such as members who act as stipulated in the articles of association.",
+  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd is supervised by the Canadian Financial Intelligence Unit (FIU) and the Canadian Financial Transaction and Reporting Analysis Center (FINTRAC). The MSB license number is M20282836. The Canadian Financial Transaction and Reporting Analysis Center (FINTRAC) is Canada's financial intelligence unit, established in 2000. It is an independent agency that reports to the Minister of Finance and is mainly responsible for collecting, analyzing, evaluating and disclosing relevant information about the Canadian financial industry to protect Canadian financial stability and security.",
+  "view": "View"
 }
