--- a/src/i18n/locales/en/questions.json
+++ b/src/i18n/locales/en/questions.json
@@ -2,10 +2,10 @@
   "questions": "Questions",
   "thisArticleCollects": "This article collects most questions investors often ask, and hope you can find those answers useful.",
   "whatKindOfSupervision": "What kind of supervision WCG is regulated?",
-  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd is registered under the International Business Law and is regulated by the Saint Vincent and the Grenadines Financial Services Authority (SVGFSA), numbered 26087 BC 2020.",
-  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd is supervised by the Canadian Financial Intelligence Unit (FIU) and the Canadian Financial Transaction and Reporting Analysis Center (FINTRAC). The MSB license number is M20282836.",
+  "WCGIsABusinessBrand": "WCG Markets Ltd is a business brand used by multiple companies, including",
   "WCGMarketsLtdIsAuthorized": "WCG Markets Ltd is authorized and supervised by the Hong Kong Gold & Silver Exchange (CGSE), and is a No. 12 A1 member.",
-  "WCGIsALimitedLiabilityCompany": "WCG is a limited liability company incorporated in the United Kingdom with company number 11019948.",
+  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd is supervised by the Canadian Financial Intelligence Unit (FIU) and the Canadian Financial Transaction and Reporting Analysis Center (FINTRAC). The MSB license number is M20282836.",
+  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd is registered under the International Business Law and is regulated by the Saint Vincent and the Grenadines Financial Services Authority (SVGFSA), numbered 26087 BC 2020.",
   "HowToOpenAnAccountInWCG": "How to open an account in WCG?",
   "youCanRegisterYourRealAccount": "You can register your real account on the official website of WCG, or click here to register.",
   "whatKindOfAccounts": "What kind of accounts do the platform provide?",
