--- a/src/i18n/locales/ms/questions.json
+++ b/src/i18n/locales/ms/questions.json
@@ -2,10 +2,10 @@
   "questions": "Soalan lazim",
   "thisArticleCollects": "Artikel ini mengumpulkan kebanyakan soalan yang sering diajukan oleh pelabur dan harap anda dapat memperoleh jawapan yang berguna.",
   "whatKindOfSupervision": "Apa jenis pengawasan WCG yang diatur?",
-  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd didaftarkan di bawah Undang-undang Perniagaan Antarabangsa dan diatur oleh Saint Vincent dan Otoritas Perkhidmatan Kewangan Grenadines (SVGFSA), bernombor 26087 SM 2020.",
-  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd diselia oleh Unit Perisikan Kewangan Kanada (FIU) dan Pusat Analisis Transaksi dan Pelaporan Kewangan Kanada (FINTRAC). Nombor lesen MSB adalah M20282836.",
+  "WCGIsABusinessBrand": "WCG adalah jenama perniagaan yang digunakan oleh pelbagai syarikat, termasuk",
   "WCGMarketsLtdIsAuthorized": "WCG Markets Ltd diberi kuasa dan diawasi oleh Hong Kong Gold & Silver Exchange (CGSE), dan merupakan ahli No. 12 A1.",
-  "WCGIsALimitedLiabilityCompany": "WCG adalah syarikat berhad yang diperbadankan di United Kingdom dengan nombor syarikat 11019948.",
+  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd diselia oleh Unit Perisikan Kewangan Kanada (FIU) dan Pusat Analisis Transaksi dan Pelaporan Kewangan Kanada (FINTRAC). Nombor lesen MSB adalah M20282836.",
+  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd didaftarkan di bawah Undang-undang Perniagaan Antarabangsa dan diatur oleh Saint Vincent dan Otoritas Perkhidmatan Kewangan Grenadines (SVGFSA), bernombor 26087 SM 2020.",
   "HowToOpenAnAccountInWCG": "Bagaimana cara membuka akaun di WCG?",
   "youCanRegisterYourRealAccount": "Anda boleh mendaftarkan akaun sebenar anda di laman web rasmi WCG, atau klik di sini untuk mendaftar.",
   "whatKindOfAccounts": "Apakah jenis akaun yang disediakan oleh platform?",
