--- a/src/i18n/locales/ar/iBBroker.json
+++ b/src/i18n/locales/ar/iBBroker.json
@@ -31,6 +31,5 @@
   "yourTotalCommission": "إجمالي عمولتك",
   "earnCommissionsInstantly": "إكسب العمولات على الفور",
   "becomingAnAgentBroker": "أن تصبح وكيلاً / وسيطاً سوف تكون أسهل طريقة لزيادة دخلك حيث أنه لا توجد تكلفة للتسجيل. يمكنك العمل من أي مكان وحتى الترويج لخدماتك من خلال الموقع الإلكتروني. في الوقت نفسه، يمكنك إحالة العملاء مباشرةً إلى WCG، وإرشادهم خلال عملية فتح الحساب الحقيقي، وشرح جميع فوائد أن تصبح عميلا لـدى WCG.",
-  "iWantToBeAnAgent": "اريد ان اكون وكيلا",
-  "standard": "المعايير"
+  "iWantToBeAnAgent": "اريد ان اكون وكيلا"
 }
