style(contactus): redo contactUs, add i18n, components, RWD

--- a/src/i18n/locales/cn/contactUs.json
+++ b/src/i18n/locales/cn/contactUs.json
@@ -29,5 +29,35 @@
   "tooShort": "内容过短",
   "tooLong": "内容过长",
   "invalidFormat": "格式错误",
-  "required": "必填"
+  "required": "必填",
+  "January": "一月",
+  "February": "二月",
+  "March": "三月",
+  "April": "四月",
+  "May": "五月",
+  "June": "六月",
+  "July": "七月",
+  "August": "八月",
+  "September": "九月",
+  "October": "十月",
+  "November": "十一月",
+  "December": "十二月",
+  "establishedHongKong": "成立香港晨辰贸易有限公司",
+  "wonTheNo": "荣获香港金银业贸易场12号行员牌照，主营贵金属的国际贸易业务",
+  "changedItsName": "更名为文传金业有限公司",
+  "theOnlineTradingPlatform": "正式推出线上交易平台，方便客户可以对现货进行对冲",
+  "theInternationalTradeVolume": "实体贵金属的国际贸易量达日均200多公斤以上",
+  "setUpVietnam": "设立越南联络处",
+  "invitedToParticipate": "受邀参加第十六届中国上海理财博览会，接受媒体专访",
+  "partneredWith": "伙拍印度尼西亚当地知名持牌交易商 – 中央资本期货有限公司，正式迈进全球第四大市场",
+  "awardedTheMostInvestorTrusted": "荣膺年度最具投资者信赖贵金属交易商",
+  "WCGMarketsLtdObtained": "WCG Markets Ltd取得圣文森特和格林纳丁斯金融服务管理局（SVGFSA）牌照，号码为126087 BC 2020",
+  "establishedMalaysia": "设立马来西亚联络处",
+  "setUpTaiwan": "设立台湾联络处",
+  "aLeaderInTheIndustry": "业界翘楚吴国强先生强势加盟，负责风控及监控部门。吴先生拥有财务硕士学位及多项国际专业资格，历任多家世界级银行首席交易员和风险管理部主管",
+  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Markets Ltd取得拿大FINTRAC MSB牌照，号码为 M20282836",
+  "startCharityProjects": "启动慈善项目，积极参与教育及医疗慈善项目，致力成为良好企业公民，回馈社会",
+  "integrateAndUpdate": "整合及更新品牌。采用全新标志和标语，也隆重推出全新网页，具备多国语言，便利国际投资者",
+  "theTradingSystem": "交易系统升级，推出更多新产品，如美股，加密货币等，优化客户的投资体验",
+  "focusingOn": "心系乡村素质教育，特赞助知行教育基金会 21-22 年度知行图书角项目，预计最少有6所小学，数以千计的小学生可因此获益"
 }
