fix type definition part 2, iBBroker

--- a/src/i18n/locales/ms/iBBroker.json
+++ b/src/i18n/locales/ms/iBBroker.json
@@ -31,6 +31,5 @@
   "yourTotalCommission": "Jumlah komisen anda",
   "earnCommissionsInstantly": "Dapatkan komisen dengan serta-merta",
   "becomingAnAgentBroker": "Menjadi ejen / broker akan menjadi kaedah termudah untuk menambah pendapatan anda kerana tidak ada kos pendaftaran. Anda boleh bekerja di mana sahaja dan bahkan mempromosikan perkhidmatan anda melalui laman web. Pada masa yang sama, anda boleh merujuk klien secara langsung ke WCG, membimbing mereka melalui proses pembukaan akaun sebenar, dan menerangkan semua faedah menjadi pelanggan WCG",
-  "iWantToBeAnAgent": "Saya mahu menjadi ejen",
-  "standard": "piawai"
+  "iWantToBeAnAgent": "Saya mahu menjadi ejen"
 }
