style(linkbutton): modify link buttons on pc and mobile, extract logic from langselector

--- a/src/i18n/locales/cn/common.json
+++ b/src/i18n/locales/cn/common.json
@@ -2,6 +2,8 @@
   "openRealAccount": "开立真实账户",
   "openDemoAccount": "开立模拟账户",
   "usersCenter": "客户中心",
+  "usersCenterNew": "新客户中心",
+  "usersCenterOld": "旧客户中心",
   "iBCenter": "代理中心",
   "contactUs": "联系我们",
   "telegram": "Telegram",
