--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -2,6 +2,8 @@
   "openRealAccount": "Open Real Account",
   "openDemoAccount": "Open Demo Account",
   "usersCenter": "Users' Center",
+  "usersCenterNew": "Users' Center 2.0",
+  "usersCenterOld": "Users' Center 1.0",
   "iBCenter": "IB Center",
   "contactUs": "Contact us",
   "telegram": "Telegram",
