--- a/src/i18n/locales/id/common.json
+++ b/src/i18n/locales/id/common.json
@@ -2,6 +2,8 @@
   "openRealAccount": "Buka akun real",
   "openDemoAccount": "Buka akun demo",
   "usersCenter": "Pusat Pengguna",
+  "usersCenterNew": "Pusat Pengguna 2.0",
+  "usersCenterOld": "Pusat Pengguna 1.0",
   "iBCenter": "Pusat IB",
   "contactUs": "Hubungi kami",
   "telegram": "Telegram",
