--- a/src/i18n/locales/ms/common.json
+++ b/src/i18n/locales/ms/common.json
@@ -2,6 +2,8 @@
   "openRealAccount": "Buka akaun sebenar",
   "openDemoAccount": "Pusat Pengguna",
   "usersCenter": "Pusat pelanggan",
+  "usersCenterNew": "Pusat pelanggan 2.0",
+  "usersCenterOld": "Pusat pelanggan 1.0",
   "iBCenter": "Pusat Agen",
   "contactUs": "Hubungi Kami",
   "telegram": "Telegram",
