--- a/src/i18n/locales/vi/common.json
+++ b/src/i18n/locales/vi/common.json
@@ -2,6 +2,8 @@
   "openRealAccount": "Mở tài khoản thực",
   "openDemoAccount": "Mở tài khoản demo",
   "usersCenter": "Trung tâm khách hàng",
+  "usersCenterNew": "Trung tâm khách hang 2.0",
+  "usersCenterOld": "Trung tâm khách hang 1.0",
   "iBCenter": "Trung tâm đại lý",
   "contactUs": "Liên hệ chúng tôi",
   "telegram": "Telegram",
