--- a/src/i18n/locales/zh/common.json
+++ b/src/i18n/locales/zh/common.json
@@ -2,6 +2,8 @@
   "openRealAccount": "開立真實帳戶",
   "openDemoAccount": "開立模擬帳戶",
   "usersCenter": "客戶中心",
+  "usersCenterNew": "新客戶中心",
+  "usersCenterOld": "舊客戶中心",
   "iBCenter": "代理中心",
   "contactUs": "聯繫我們",
   "telegram": "Telegram",
