style(amlpolicy): add amlPolicy page

--- a/src/i18n/locales/ar/footer.json
+++ b/src/i18n/locales/ar/footer.json
@@ -4,6 +4,7 @@
   "termsAndConditions": "الأحكام والشروط",
   "disputeSettlement": "تسوية المنازعات",
   "riskDisclaimer": "إخلاء المسؤولية عن المخاطر",
+  "amlPolicy": "AML Policy",
   "followUs": "تابعنا",
   "provideYouWith": "نوفر لك خدمات استثمارية عالية الجودة مع أكثر الخبرات المهنية في الصناعة",
   "allTradesInvolveRisks": "سياسة المخاطر: جميع الصفقات تنطوي على مخاطر. قد تكون خسارتك في التداول أكبر من إجمالي إيداعك.",
