--- a/src/i18n/locales/cn/footer.json
+++ b/src/i18n/locales/cn/footer.json
@@ -4,6 +4,7 @@
   "termsAndConditions": "条款细则",
   "disputeSettlement": "争端处理",
   "riskDisclaimer": "免责申明",
+  "amlPolicy": "防止洗黑钱条款",
   "followUs": "关注我们",
   "provideYouWith": "凭借业内最专业的经验为您提供优质的投资服务",
   "allTradesInvolveRisks": "所有交易均涉及风险，您的损失可能大于您的入金。",
