--- a/src/i18n/locales/en/footer.json
+++ b/src/i18n/locales/en/footer.json
@@ -4,6 +4,7 @@
   "termsAndConditions": "Terms and Conditions",
   "disputeSettlement": "Dispute Settlement",
   "riskDisclaimer": "Risk Disclaimer",
+  "amlPolicy": "AML Policy",
   "followUs": "Follow us",
   "provideYouWith": "Provide you with high-quality investment services with the most professional experience in the industry",
   "allTradesInvolveRisks": "Risk policy: All trades involve risks. Your trading loss may be greater than your total deposit.",
