--- a/src/i18n/locales/id/footer.json
+++ b/src/i18n/locales/id/footer.json
@@ -4,6 +4,7 @@
   "termsAndConditions": "Syarat dan Ketentuan",
   "disputeSettlement": "Penyelesaian Sengketa",
   "riskDisclaimer": "Penafsiran tentang Risiko",
+  "amlPolicy": "AML Policy",
   "followUs": "Ikuti kami",
   "provideYouWith": "Memberi Anda layanan investasi berkualitas tinggi dengan pengalaman paling profesional di industrinya",
   "allTradesInvolveRisks": "Semua perdagangan melibatkan risiko. Kerugian dalam perdagangan Anda mungkin lebih besar dari total deposit Anda.Kebijakan resiko",
