--- a/src/i18n/locales/ms/footer.json
+++ b/src/i18n/locales/ms/footer.json
@@ -4,6 +4,7 @@
   "termsAndConditions": "Terma dan Syarat",
   "disputeSettlement": "Penyelesaian Pertikaian",
   "riskDisclaimer": "Penafian Risiko",
+  "amlPolicy": "AML Policy",
   "followUs": "Ikut kami",
   "provideYouWith": "Memberi anda perkhidmatan pelaburan berkualiti tinggi dengan pengalaman paling profesional dalam industri ini",
   "allTradesInvolveRisks": "Dasar risiko: Semua perdagangan melibatkan risiko. Kerugian perdagangan anda mungkin lebih besar daripada jumlah deposit anda.",
