--- a/src/i18n/locales/vi/footer.json
+++ b/src/i18n/locales/vi/footer.json
@@ -4,6 +4,7 @@
   "termsAndConditions": "Các điều khoản và điều kiện",
   "disputeSettlement": "Giải quyết tranh chấp",
   "riskDisclaimer": "Tuyên bố từ chối trách nhiệm về rủi ro",
+  "amlPolicy": "AML Policy",
   "followUs": "Theo chúng tôi",
   "provideYouWith": "Cung cấp cho bạn các dịch vụ đầu tư chất lượng cao với trải nghiệm chuyên nghiệp nhất trong ngành",
   "allTradesInvolveRisks": "Chính sách rủi ro: Tất cả các giao dịch đều có rủi ro. Khoản lỗ giao dịch của bạn có thể lớn hơn tổng số tiền gửi của bạn.",
