style(financialnews): modify financialNews

--- a/src/i18n/locales/cn/header.json
+++ b/src/i18n/locales/cn/header.json
@@ -29,7 +29,7 @@
   "advancedTrading": "高级交易课程",
   "marketNews": "市场资讯",
   "financialCalendar": "财经日历",
-  "financialNews": "财经新闻消息",
+  "financialNews": "财经新闻",
   "marketAnalysis": "市场分析",
   "partner": "成为伙伴",
   "fundManager": "基金经理",
