style(toplinks): modify top links

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -5,6 +5,8 @@
   "usersCenterNew": "Users' Center 2.0",
   "usersCenterOld": "Users' Center 1.0",
   "iBCenter": "IB Center",
+  "iBCenterNew": "IB Center 2.0",
+  "iBCenterOld": "IB Center 1.0",
   "contactUs": "Contact us",
   "telegram": "Telegram",
   "online": "online",
