--- a/src/i18n/locales/id/common.json
+++ b/src/i18n/locales/id/common.json
@@ -5,6 +5,8 @@
   "usersCenterNew": "Pusat Pengguna 2.0",
   "usersCenterOld": "Pusat Pengguna 1.0",
   "iBCenter": "Pusat IB",
+  "iBCenterNew": "Pusat IB 2.0",
+  "iBCenterOld": "Pusat IB 1.0",
   "contactUs": "Hubungi kami",
   "telegram": "Telegram",
   "online": "on line",
