--- a/src/i18n/locales/zh/common.json
+++ b/src/i18n/locales/zh/common.json
@@ -5,6 +5,8 @@
   "usersCenterNew": "新客戶中心",
   "usersCenterOld": "舊客戶中心",
   "iBCenter": "代理中心",
+  "iBCenterNew": "新代理中心",
+  "iBCenterOld": "舊代理中心",
   "contactUs": "聯繫我們",
   "telegram": "Telegram",
   "online": "線上客服",
