--- a/src/i18n/locales/cn/common.json
+++ b/src/i18n/locales/cn/common.json
@@ -5,6 +5,8 @@
   "usersCenterNew": "新客户中心",
   "usersCenterOld": "旧客户中心",
   "iBCenter": "代理中心",
+  "iBCenterNew": "新代理中心",
+  "iBCenterOld": "旧代理中心",
   "contactUs": "联系我们",
   "telegram": "Telegram",
   "online": "在线客服",
