style(platform/index): add huawei

--- a/src/i18n/locales/en/platform.json
+++ b/src/i18n/locales/en/platform.json
@@ -17,6 +17,7 @@
   "multiAccountManagementSystem": "MT4 multi-account management system",
   "forIPhone": "MT4 for iPhone",
   "forAndroid": "MT4 for Android",
+  "forHuawei": "MT4 for Huawei",
   "MT4PcVersion": "MT4 PC version",
   "MetaTrader4IsTheMostPopular": "MetaTrader 4 is the most popular online trading platform over the world and has established a leading position in the industry for many years. MetaTrader 4 (MT4) is specially designed for foreign exchange and futures transactions. Traders can analyze market trends, draw trading charts, and manage their positions and orders through its intuitive user interface and complete functions.",
   "downloadImmediately": "Download Immediately",
@@ -47,8 +48,9 @@
   "weProvideTheMT4MobileApplication": "We provide the MT4 mobile application, as long as you download and install the MT4 APP on your mobile phone or tablet computer, you can easily trade anytime, anywhere. MT4 iOS and Android APP provide a more simplified operation interface, which can monitor market trends more conveniently and quickly, and enjoy an excellent trading experience. Not only It is your daily assistant, but also your irreplaceable tool.",
   "MetaTrader4MobileApp": "MetaTrader4 mobile app",
   "downloadOurMT4MobileAppNow": "Download our MT4 mobile app now and let it become your trading partner, helping you enter the financial market anytime, anywhere and grasp every trading opportunity 24 hours a day.",
-  "downloadTheIOSVersion": "Download the iOS version",
-  "downloadTheAndroidVersion": "Download the Android version",
+  "IOSVersion": "iOS version",
+  "AndroidVersion": "Android version",
+  "HuaweiVersion": "Huawei version",
   "MAMMultiAccountManagementSystem": "MAM multi-account management system",
   "theMultiAccountManagementSystem": "The Multi-Account Management System (MAM) has important integrated management functions, allowing asset managers to manage multiple accounts through only one interface. A single interface allows asset managers to effectively and accurately configure trading conditions for multiple personal accounts, and evenly distribute the same trading conditions and strategies to individual accounts according to a preset ratio, helping you manage trading activities and improve management skills.",
   "consultCustomerServiceImmediately": "Consult customer service immediately",
