--- a/src/i18n/locales/id/platform.json
+++ b/src/i18n/locales/id/platform.json
@@ -17,6 +17,7 @@
   "multiAccountManagementSystem": "Sistem manajemen multi-akun MT4",
   "forIPhone": "MT4 untuk iPhone",
   "forAndroid": "MT4 untuk Android",
+  "forHuawei": "MT4 untuk Huawei",
   "MT4PcVersion": "Versi PC MT4",
   "MetaTrader4IsTheMostPopular": "MetaTrader 4 adalah platform perdagangan online paling populer di dunia dan telah menetapkan posisi terdepan di industri selama bertahun-tahun. MetaTrader 4 (MT4) dirancang khusus untuk transaksi valuta asing dan berjangka. Pedagang dapat menganalisis tren pasar, menggambar grafik perdagangan, dan mengelola posisi dan pesanan mereka melalui antarmuka pengguna yang intuitif dan fungsi yang lengkap.",
   "downloadImmediately": "Unduh segera",
@@ -47,8 +48,9 @@
   "weProvideTheMT4MobileApplication": "Kami menyediakan aplikasi seluler MT4, selama Anda mengunduh dan menginstal APLIKASI MT4 di ponsel atau komputer tablet Anda, Anda dapat dengan mudah berdagang kapan saja, di mana saja. MT4 iOS dan Android APP menyediakan antarmuka operasi yang lebih sederhana, yang dapat memantau tren pasar dengan lebih nyaman dan cepat, dan menikmati pengalaman perdagangan yang luar biasa. Tidak hanya itu asisten harian Anda, tetapi juga alat Anda yang tak tergantikan.",
   "MetaTrader4MobileApp": "Aplikasi seluler MetaTrader4",
   "downloadOurMT4MobileAppNow": "Unduh aplikasi seluler MT4 kami sekarang dan jadikan itu mitra dagang Anda, membantu Anda memasuki pasar keuangan kapan saja, di mana saja, dan raih setiap peluang perdagangan 24 jam sehari.",
-  "downloadTheIOSVersion": "Unduh versi iOS",
-  "downloadTheAndroidVersion": "Unduh versi Android",
+  "IOSVersion": "versi iOS",
+  "AndroidVersion": "versi Android",
+  "HuaweiVersion": "versi Huawei",
   "MAMMultiAccountManagementSystem": "Sistem manajemen multi-akun MAM",
   "theMultiAccountManagementSystem": "Sistem Manajemen Multi-Akun (MAM) memiliki fungsi manajemen terintegrasi yang penting, memungkinkan manajer aset untuk mengelola banyak akun hanya melalui satu antarmuka. Sebuah antarmuka tunggal memungkinkan manajer aset untuk secara efektif dan akurat mengkonfigurasi kondisi perdagangan untuk beberapa akun pribadi, dan secara merata mendistribusikan kondisi dan strategi perdagangan yang sama ke akun individu sesuai dengan rasio yang telah ditetapkan, membantu Anda mengelola aktivitas perdagangan dan meningkatkan keterampilan manajemen.",
   "consultCustomerServiceImmediately": "Konsultasi layanan pelanggan segera",
