feat(many): modify companyNews, announcements, add new activity
modify companyNews, announcements, add new activity, add x-axis scroll on InfoAccordion

--- a/src/i18n/locales/cn/contactUs.json
+++ b/src/i18n/locales/cn/contactUs.json
@@ -54,5 +54,6 @@
   "startCharityProjects": "启动慈善项目，积极参与教育及医疗慈善项目，致力成为良好企业公民，回馈社会",
   "integrateAndUpdate": "整合及更新品牌。采用全新标志和标语，也隆重推出全新网页，具备多国语言，便利国际投资者",
   "theTradingSystem": "交易系统升级，推出更多新产品，如美股等，优化客户的投资体验",
-  "focusingOn": "心系乡村素质教育，特赞助知行教育基金会 21-22 年度知行图书角项目，预计最少有6所小学，数以千计的小学生可因此获益"
+  "focusingOn": "心系乡村素质教育，特赞助知行教育基金会 21-22 年度知行图书角项目，预计最少有6所小学，数以千计的小学生可因此获益",
+  "WCGIFXEXPO": "WCG & IFX EXPO 国际环球金融展览"
 }
