--- a/src/i18n/locales/zh/contactUs.json
+++ b/src/i18n/locales/zh/contactUs.json
@@ -54,5 +54,6 @@
   "startCharityProjects": "啟動慈善項目，積極參與教育及醫療慈善項目，致力成為良好企業公民，回饋社會",
   "integrateAndUpdate": "整合及更新品牌。采用全新標志和標語，也隆重推出全新網頁，具備多國語言，便利國際投資者",
   "theTradingSystem": "交易系統升級，推出更多新產品，如美股等，優化客戶的投資體驗",
-  "focusingOn": "心系鄉村素質教育，特讚助知行教育基金會 21-22 年度知行圖書角項目，預計最少有6所小學，數以千計的小學生可因此獲益"
+  "focusingOn": "心系鄉村素質教育，特讚助知行教育基金會 21-22 年度知行圖書角項目，預計最少有6所小學，數以千計的小學生可因此獲益",
+  "WCGIFXEXPO": "WCG & IFX EXPO 國際環球金融展覽"
 }
