refactor(questions): modify questions (add new content)

--- a/src/i18n/locales/ar/questions.json
+++ b/src/i18n/locales/ar/questions.json
@@ -7,6 +7,8 @@
   "WCGMarketsLtdIsRegistered": "WCG Markets Ltd مسجلة بموجب قانون الأعمال الدولي وتخضع لرقابة هيئة الخدمات المالية في سانت فنسنت وجزر غرينادين (SVGFSA) ، برقم 26087 قبل الميلاد 2020.",
   "HowToOpenAnAccountInWCG": "كيفية فتح حساب في WCG?",
   "youCanRegisterYourRealAccount": "يمكنك تسجيل حسابك الحقيقي على الموقع الرسمي لـ WCG، أو انقر هنا للتسجيل",
+  "WCGAccountOpeningAge": "سن فتح حساب WCG",
+  "theAgeToOpenAnAccount": "يجب أن يكون سن فتح الحساب في WCG 18 عامًا أو أكثر ، ولا يتم قبول العملاء الذين تبلغ أعمارهم 65 عامًا أو أكثر للتقدم لفتح الحساب.",
   "whatKindOfAccounts": "ما نوع الحسابات التي توفرها المنصة ?",
   "weProvideDifferentAccountTypes": "نحن نقدم أنواع حسابات مختلفة، الرجاء الاتصال بموظفي خدمة العملاء للحصول على التفاصيل",
   "whatKindOfDocuments": "ما هو نوع المستندات التي أحتاجها لاقوم بتحميلها ?",
