--- a/src/i18n/locales/cn/questions.json
+++ b/src/i18n/locales/cn/questions.json
@@ -9,6 +9,8 @@
   "youCanRegisterYourRealAccount": "您可以在WCG官网注册您的真实账户，或点此注册。",
   "whatKindOfAccounts": "平台提供什么种类的账户?",
   "weProvideDifferentAccountTypes": "详情请洽客服人员。",
+  "WCGAccountOpeningAge": "WCG开户年龄",
+  "theAgeToOpenAnAccount": "于WCG开户年龄必须年满18岁或以上，不接受65岁或以上岁数客户申请开户。",
   "whatKindOfDocuments": "我需要上传哪些档案?",
   "customersInMainlandChina": "中国大陆地区客户仅需要上传您的身份证明档案；中国大陆地区以外客户需要请您提供您的护照以及地址证明（如驾驶证、常住人口登记卡或近三个月水电煤帐单等）。",
   "howLongWillItTake": "账户需要多长时间稽核完成?",
