--- a/src/i18n/locales/en/questions.json
+++ b/src/i18n/locales/en/questions.json
@@ -7,6 +7,8 @@
   "WCGMarketsLtdIsRegistered": "WCG Markets Ltd is registered under the International Business Law and is regulated by the Saint Vincent and the Grenadines Financial Services Authority (SVGFSA), numbered 26087 BC 2020.",
   "HowToOpenAnAccountInWCG": "How to open an account in WCG?",
   "youCanRegisterYourRealAccount": "You can register your real account on the official website of WCG, or click here to register.",
+  "WCGAccountOpeningAge": "WCG account opening age",
+  "theAgeToOpenAnAccount": "The age to open an account at WCG must be 18 years old or above. Clients aged 65 or above are not accepted to apply for account opening.",
   "whatKindOfAccounts": "What kind of accounts do the platform provide?",
   "weProvideDifferentAccountTypes": "We provide different account types, please contact our customer service staff for details.",
   "whatKindOfDocuments": "What kind of documents I need to upload?",
