--- a/src/i18n/locales/ms/questions.json
+++ b/src/i18n/locales/ms/questions.json
@@ -7,6 +7,8 @@
   "WCGMarketsLtdIsRegistered": "WCG Markets Ltd didaftarkan di bawah Undang-undang Perniagaan Antarabangsa dan diatur oleh Saint Vincent dan Otoritas Perkhidmatan Kewangan Grenadines (SVGFSA), bernombor 26087 SM 2020.",
   "HowToOpenAnAccountInWCG": "Bagaimana cara membuka akaun di WCG?",
   "youCanRegisterYourRealAccount": "Anda boleh mendaftarkan akaun sebenar anda di laman web rasmi WCG, atau klik di sini untuk mendaftar.",
+  "WCGAccountOpeningAge": "Umur pembukaan akaun WCG",
+  "theAgeToOpenAnAccount": "Umur membuka akaun di WCG mestilah berumur 18 tahun ke atas, dan pelanggan yang berumur 65 tahun ke atas tidak diterima untuk memohon pembukaan akaun.",
   "whatKindOfAccounts": "Apakah jenis akaun yang disediakan oleh platform?",
   "weProvideDifferentAccountTypes": "Kami menyediakan pelbagai jenis akaun, sila hubungi kakitangan perkhidmatan pelanggan kami untuk maklumat lanjut.",
   "whatKindOfDocuments": "Apa jenis dokumen yang perlu saya muat naik?",
