refactor(questions): modify content of questions

--- a/src/i18n/locales/ar/questions.json
+++ b/src/i18n/locales/ar/questions.json
@@ -16,8 +16,12 @@
   "howLongWillItTake": "كم من الوقت سيستغرق فتح حساب جديد ?",
   "accountOpeningWillTake": "يستغرق فتح الحساب عادة يوم عمل واحد",
   "howLongWillItTakeToProcess": "كم من الوقت ستستغرق معالجة طلب السحب ?",
-  "submitTheWithdrawal": "أرسل تعليمات السحب قبل الساعة 11:00 صباحًا ، وستتمكن من الحصول على حسابك قبل حوالي الساعة 1:00 مساءً في نفس اليوم.",
-  "submitTheWithdrawalInstruction": "قم بإرسال تعليمات السحب قبل الساعة 5:00 مساءً ، وسيتم قيد الحساب قبل الساعة 7:00 مساءً من نفس اليوم.",
+  "WCGProcessingWithdrawalApplicationTime": "وقت طلب السحب من WCG: 11: 00-12: 00 ظهرًا / 2: 00-5: 00 مساءً. ستتم معالجة السحب مرة واحدة كل ساعة ، وسيتم استلام الحساب في غضون ساعتين في أسرع وقت. يوم عمل واحد لـ يتم المعالجة.",
+  "WCGWithdrawalConditions": "شروط سحب WCG؟",
+  "ifTheCustomerDepositsFunds": " إذا قام العميل بإيداع الأموال ، فيجب عليه سحبها دون أي معاملة ، وسيتم فرض رسوم معالجة بنسبة 3٪ لإعادة الأموال.",
+  "afterACertainTransactionVolume": " بعد استيفاء حجم معاملات معين ، سيتم التنازل عن رسوم المناولة. متطلبات حجم التداول: يسود آخر مبلغ إيداع متراكم. على سبيل المثال ، آخر مبلغ إيداع هو 1،000 دولار أمريكي. يتم التنازل عن رسوم المعاملة بعد تداول عقد واحد ثم التقدم بطلب للسحب. يتطلب إيداع 2000 دولار أمريكي تداول 2 عقد ، وإيداع 5000 دولار أمريكي يتطلب التداول. 5 عقود ، وهكذا.",
+  "ifTheTransactionVolume": "إذا كان حجم الصفقة غير كافٍ وأصررت على السحب ، فأنت بحاجة إلى خصم 3٪ من اللوتات المتداولة من آخر مبلغ إيداع متراكم كرسوم سحب. (يلاحظ العميل أنه سيتم خصم رسوم الخصم عندما يسحب العميل الأموال ، وإلا فسيتم رفض السحب).",
+  "ifTheTransactionVolumeIsInsufficient": " إذا كان حجم المعاملة غير كافٍ ، فسيتم فرض رسوم إدارية قدرها 5 دولارات أمريكية على عمليات السحب التي تقل عن 50 دولارًا أمريكيًا.",
   "HowDoIKnowMyWithdrawal": "كيف أعرف أنه تمت الموافقة على طلب السحب الخاص بي ?",
   "onceTheWithdrawalApplication": "سيتم خصم المبلغ من حساب التداول الخاص بك بمجرد الموافقة على طلب السحب، وسيتم تقليل الهامش المتاح للتداول والحفاظ على أي صفقات مفتوحة معلقة",
   "whatIsTheMT4Platform": "ما هي منصة MT4 ?",
