--- a/src/i18n/locales/cn/questions.json
+++ b/src/i18n/locales/cn/questions.json
@@ -16,8 +16,12 @@
   "howLongWillItTake": "账户需要多长时间稽核完成?",
   "accountOpeningWillTake": "开户正常1个工作日内会办理完成。",
   "howLongWillItTakeToProcess": "办理出金申请需要多长时间?",
-  "submitTheWithdrawal": "上午  11:00 时 前提交提款指示，当天约 下午 1:00 时 前便能到账。",
-  "submitTheWithdrawalInstruction": "下午 5:00 时 前提交提款指示，当天约 晚上 7:00 时 前便能到账。",
+  "WCGProcessingWithdrawalApplicationTime": "WCG处理出金申请时间:中午11:00-12:00/ 下午2:00-5:00 每一小时处理一次出金，最快2小时内到帐，超过出金时间申请出金，会在下一个工作天进行处理。",
+  "WCGWithdrawalConditions": "WCG出金条件?",
+  "ifTheCustomerDepositsFunds": "如客户存入资金后，没有进行任何交易就要提走，退回资金要收取3%手续费。",
+  "afterACertainTransactionVolume": "在满足一定的交易量后，会豁免手续费。交易量的要求：以最近累计入金金额为准，例如最近一次入金金额为1000美元，需要交易1手后再申请出金才免手续费，入金2000美金需要交易2手，入金5000美金就需交易5手，以此类推。",
+  "ifTheTransactionVolume": "假如交易量不足，又坚持出金，需要以最近累计入金金额扣除已交易手数部分的3%作为出金手续费。（客户在出金时备注同意扣除手续费才会扣除，否则出金会被拒绝）。",
+  "ifTheTransactionVolumeIsInsufficient": "交易量不足，出金低于50美元需要支付5美元行政费用。",
   "HowDoIKnowMyWithdrawal": "如何知道出金申请已经被准予?",
   "onceTheWithdrawalApplication": "一旦提款申请获得批准，出金金额将自动从平台中扣除，并减少可用于交易和维持任何未结头寸的保证金。",
   "whatIsTheMT4Platform": "什么是MT4平台?",
