--- a/src/i18n/locales/en/questions.json
+++ b/src/i18n/locales/en/questions.json
@@ -16,8 +16,12 @@
   "howLongWillItTake": "How long will it take to open a new account?",
   "accountOpeningWillTake": "Account opening will take 1 working day normally.",
   "howLongWillItTakeToProcess": "How long will it take to process a withdrawal application?",
-  "submitTheWithdrawal": "Submit the withdrawal instructions before 11:00 in the morning, and you will be able to get your account before about 1:00 pm on the same day.",
-  "submitTheWithdrawalInstruction": "Submit the withdrawal instruction before 5:00 pm, and the account will be credited before 7:00 pm on the same day.",
+  "WCGProcessingWithdrawalApplicationTime": "WCG processing withdrawal application time: 11:00-12:00 noon/ 2:00-5:00 pm The withdrawal will be processed once every hour, and it will arrive in the account within 2 hours at the fastest. One business day for processing.",
+  "WCGWithdrawalConditions": "WCG withdrawal conditions?",
+  "ifTheCustomerDepositsFunds": "If the customer deposits funds, they must withdraw them without any transaction, and a 3% handling fee will be charged for returning the funds.",
+  "afterACertainTransactionVolume": "After a certain transaction volume is met, the handling fee will be waived. Trading volume requirements: The latest accumulated deposit amount shall prevail. For example, the latest deposit amount is USD 1,000. The transaction fee is waived after trading 1 lot and then applying for withdrawal. Depositing USD 2,000 requires trading 2 lots, and depositing USD 5,000 requires trading. 5 lots, and so on.",
+  "ifTheTransactionVolume": "If the transaction volume is insufficient and you insist on withdrawing, you need to deduct 3% of the traded lot from the latest accumulated deposit amount as the withdrawal fee. (The customer remarks that the deduction fee will be deducted when the customer withdraws the money, otherwise the withdrawal will be rejected).",
+  "ifTheTransactionVolumeIsInsufficient": "If the transaction volume is insufficient, a $5 administrative fee will be charged for withdrawals below $50.",
   "HowDoIKnowMyWithdrawal": "How do I know my withdrawal application is approved?",
   "onceTheWithdrawalApplication": "Once the withdrawal application is approved, the amount will be deducted from your trading account , and the margin available for trading and maintaining any outstanding open positions will be reduced.",
   "whatIsTheMT4Platform": "What is the MT4 platform?",
