refactor(menulist): add .env: NEXT_PUBLIC_MT4_WEB and menuList:MT4 Web Trader

--- a/src/i18n/locales/ar/header.json
+++ b/src/i18n/locales/ar/header.json
@@ -21,6 +21,7 @@
   "MT4Overview": "نظرة عامة على منصة MT4",
   "MT4PCDownload": "تحميل نسخة MT4 للكمبيوتر الشخصي",
   "MT4APPDownload": "حميل تطبيق MT4",
+  "MT4WebTrader": "MT4 ويب تريدر",
   "MAMSystem": "نظام إدارة الحسابات المتعددة MAM",
   "notice": "إخطار",
   "abnormalTrade": "جارة غير طبيعية",
