--- a/src/i18n/locales/cn/header.json
+++ b/src/i18n/locales/cn/header.json
@@ -21,6 +21,7 @@
   "MT4Overview": "MT4 平台概览",
   "MT4PCDownload": "MT4 电脑版下载",
   "MT4APPDownload": "MT4 APP版下载",
+  "MT4WebTrader": "MT4 网页版",
   "MAMSystem": "MAM 多帐号管理系统",
   "notice": "交易须知",
   "abnormalTrade": "异常交易",
