--- a/src/i18n/locales/en/header.json
+++ b/src/i18n/locales/en/header.json
@@ -21,6 +21,7 @@
   "MT4Overview": "MT4 Overview",
   "MT4PCDownload": "MT4 PC Download",
   "MT4APPDownload": "MT4 APP Download",
+  "MT4WebTrader": "MT4 Web Trader",
   "MAMSystem": "MAM System",
   "notice": "Notice",
   "abnormalTrade": "Abnormal Trade",
