--- a/src/i18n/locales/id/header.json
+++ b/src/i18n/locales/id/header.json
@@ -21,6 +21,7 @@
   "MT4Overview": "Tinjauan platform MT4",
   "MT4PCDownload": "Unduhan versi MT4 PC",
   "MT4APPDownload": "Unduhan MT4 APP",
+  "MT4WebTrader": "Pedagang Web MT4",
   "MAMSystem": "Sistem manajemen multi-akun MAM",
   "notice": "Perlu diketahui",
   "abnormalTrade": "Perdagangan Tidak Normal",
