--- a/src/i18n/locales/zh/header.json
+++ b/src/i18n/locales/zh/header.json
@@ -21,6 +21,7 @@
   "MT4Overview": "MT4 平台概覽",
   "MT4PCDownload": "MT4 電腦版下載",
   "MT4APPDownload": "MT4 APP版下載",
+  "MT4WebTrader": "MT4 網頁版",
   "MAMSystem": "MAM 多帳號管理系統",
   "notice": "交易須知",
   "abnormalTrade": "異常交易",
