fix(i18n): fix i18n wording

--- a/src/i18n/locales/ms/header.json
+++ b/src/i18n/locales/ms/header.json
@@ -21,7 +21,7 @@
   "MT4Overview": "MT4 platform Overview",
   "MT4PCDownload": "Muat turun MT4 versi PC",
   "MT4APPDownload": "Muat turun APP MT4",
-  "MT4WebTrader": "Nhà giao dịch web MT4",
+  "MT4WebTrader": "Pedagang Web MT4",
   "MAMSystem": "Sistem pengurusan pelbagai akaun MAM",
   "notice": "Transaksi Perlu Tahu",
   "abnormalTrade": "Urus niaga yang tidak normal",
