style(backtotop): add icon

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -5,7 +5,8 @@
   "iBCenter": "مركز الوسطاء المُعرّفين",
   "contactUs": "اتصل بنا",
   "telegram": "Telegram",
-  "online": "عبر الانترنت",
+  "Miduoke": "Miduoke",
+  "LiveChat": "LiveChat",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "تسجيل",
