--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -5,7 +5,8 @@
   "iBCenter": "IB Center",
   "contactUs": "Contact us",
   "telegram": "Telegram",
-  "online": "online",
+  "Miduoke": "Miduoke",
+  "LiveChat": "LiveChat",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "Client Portal",
