--- a/src/i18n/locales/id/common.json
+++ b/src/i18n/locales/id/common.json
@@ -5,7 +5,8 @@
   "iBCenter": "Pusat IB",
   "contactUs": "Hubungi kami",
   "telegram": "Telegram",
-  "online": "on line",
+  "Miduoke": "Miduoke",
+  "LiveChat": "LiveChat",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "daftar",
