--- a/src/i18n/locales/ms/common.json
+++ b/src/i18n/locales/ms/common.json
@@ -5,7 +5,8 @@
   "iBCenter": "Pusat Agen",
   "contactUs": "Hubungi Kami",
   "telegram": "Telegram",
-  "online": "dalam talian",
+  "Miduoke": "Miduoke",
+  "LiveChat": "LiveChat",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "daftar",
