--- a/src/i18n/locales/vi/common.json
+++ b/src/i18n/locales/vi/common.json
@@ -5,7 +5,8 @@
   "iBCenter": "Trung tâm đại lý",
   "contactUs": "Liên hệ chúng tôi",
   "telegram": "Telegram",
-  "online": "Trực tuyến",
+  "Miduoke": "Miduoke",
+  "LiveChat": "LiveChat",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "Đăng ký",
